--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-verificationcode-s",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "",
   "main": "lib/index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "babel-preset-stage-3": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "css-loader": "^1.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "style-loader": "^0.23.0",
