--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-verificationcode-s",
+  "name": "corki-ui",
   "version": "1.1.0",
   "description": "",
   "main": "lib/index.js",
